--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "package-name": "sanity-nextjs-do-deploy",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Trigger DigitalOcean Deployments from your NextJS + Sanity Studio.",
   "author": "Eric_WVGG",
   "license": "MIT",
@@ -24,6 +24,7 @@
     "@sanity/ui": "^3.1.10",
     "next": "^15.5.6",
     "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
