--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,11 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "declaration": true,
     "declarationDir": "types",
     "emitDeclarationOnly": true,
     "declarationMap": true
-},
+  },
   "exclude": ["node_modules"]
 }
