--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@sanity/ui": "^3.1.10",
     "next": "^15.0.0",
     "react": "^19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@types/react": "^19.2.2",
