--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,4 @@
 {
-  "compilerOptions": {
-    "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "react-jsx",
-    "declaration": true,
-    "declarationDir": "types",
-    "emitDeclarationOnly": true,
-    "declarationMap": true
-  },
-  "exclude": ["node_modules"]
+  "extends": "./tsconfig.settings",
+  "include": ["./src", "./package.config.ts"]
 }
